Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108207

Mac: errors building Qt 6.3.2 with Xcode 14.1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • 5.15.12, 6.4.0
    • 6.3.2
    • WebEngine
    • None
    • macOS 12.6
      Xcode 14.1
      Qt 6.3.2
    • macOS
    • 4ea03a0af (5.15.12), 4227b1305 (94-based)

      Configuring with options:

      -release -force-debug-info -shared -no-openssl -securetransport -sql-sqlite -qt-sqlite -qt-zlib -qt-libpng -qt-libjpeg -skip qt3d -skip qtcharts -skip qtcoap -skip qtconnectivity -skip qtdatavis3d -skip qtdoc -skip qtlocation -skip qtlottie -skip qtmqtt -skip qtnetworkauth -skip qtopcua -skip qtquick3d -skip qtquicktimeline -skip qtremoteobjects -skip qtsensors -skip qtserialbus -skip qtserialport -skip qtsvg -skip qtvirtualkeyboard -skip qtwayland -skip qtwebview  -prefix /Users/sergei.nevdakh/Qt/6.3.2.universal/qt_bin_6.3.2 -- -DCMAKE_OSX_ARCHITECTURES=x86_64;arm64
      

      Getting multiple errors during build:

      In file included from gen/third_party/blink/renderer/platform/platform_jumbo_37.cc:7:
      ./../../../3rdparty/chromium/third_party/blink/renderer/platform/graphics/compositing/paint_chunks_to_cc_layer.cc:991:14: error: call to constructor of 'gfx::Point' is ambiguous
        gfx::Point out_point(RoundedIntPoint(mapped_point));
                   ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../../../3rdparty/chromium/ui/gfx/geometry/point.h:27:23: note: candidate constructor (the implicit move constructor)
      class GEOMETRY_EXPORT Point {
                            ^
      ../../../3rdparty/chromium/ui/gfx/geometry/point.h:27:23: note: candidate constructor (the implicit copy constructor)
      ../../../3rdparty/chromium/ui/gfx/geometry/point.h:39:12: note: candidate constructor
        explicit Point(const CGPoint& point);
                 ^
      1 warning and 1 error generated.
      
      ./../../../3rdparty/chromium/third_party/blink/renderer/modules/exported/web_ax_object.cc:1196:25: error: ambiguous conversion for functional-style cast from 'blink::FloatRect' to 'gfx::RectF'
        bounds_in_container = gfx::RectF(bounds);
                              ^~~~~~~~~~~~~~~~~
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:26:23: note: candidate constructor (the implicit move constructor)
      class GEOMETRY_EXPORT RectF {
                            ^
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:26:23: note: candidate constructor (the implicit copy constructor)
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:43:12: note: candidate constructor
        explicit RectF(const CGRect& r);
      
      In file included from gen/third_party/blink/renderer/core/core_jumbo_224.cc:7:
      ./../../../3rdparty/chromium/third_party/blink/renderer/core/paint/paint_timing_detector.cc:329:45: error: ambiguous conversion for functional-style cast from 'const blink::FloatRect' to 'gfx::RectF'
        return FloatRect(widget->BlinkSpaceToDIPs(gfx::RectF(float_rect)));
                                                  ^~~~~~~~~~~~~~~~~~~~~
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:26:23: note: candidate constructor (the implicit move constructor)
      class GEOMETRY_EXPORT RectF {
                            ^
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:26:23: note: candidate constructor (the implicit copy constructor)
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:43:12: note: candidate constructor
        explicit RectF(const CGRect& r);
                 ^
      1 error generated.
      
      ./../../../3rdparty/chromium/third_party/blink/renderer/core/editing/finder/text_finder.cc:697:10: error: ambiguous conversion for functional-style cast from 'blink::FloatRect' to 'gfx::RectF'
        return gfx::RectF(FindInPageRectFromRange(EphemeralRange(ActiveMatch())));
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:26:23: note: candidate constructor (the implicit move constructor)
      class GEOMETRY_EXPORT RectF {
                            ^
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:26:23: note: candidate constructor (the implicit copy constructor)
      ../../../3rdparty/chromium/ui/gfx/geometry/rect_f.h:43:12: note: candidate constructor
        explicit RectF(const CGRect& r);
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mibrunin Michael Bruning
            sergei.nevdakh Sergei Nevdakh
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes