Fix building with XCode 14.1

The previously implicit conversion from blink::FloatRect to gfx::RectF
is no longer available when building with newer XCode. Make those
explicit where needed.

Task-number: QTBUG-108207
Change-Id: Ib195f4e423480557d9ff86571254deafb05de8a2
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/443042
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/444719